--- a/.github/workflows/codeQL.yml
+++ b/.github/workflows/codeQL.yml
@@ -13,6 +13,10 @@ jobs:
       security-events: write
       actions: read
       contents: read
+      
+    strategy:
+            matrix:
+                language: ['python','java','ruby']
 
     steps:
       - name: Checkout repository
